--- a/weblog/templates/weblog/home.html
+++ b/weblog/templates/weblog/home.html
@@ -21,7 +21,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown" style="font-family:Lalezar">
               <ul class="navbar-nav text-right ml-auto" dir="rtl">
                 <li class="nav-item">
-                      <a class="nav-link" href="authentication">ورود به سیستم</a>
+                      <a class="nav-link" href="signin">ورود به سیستم</a>
+                </li>
+                <li class="nav-item">
+                      <a class="nav-link" href="register">ثبت نام</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">درباره ما</a>
