--- a/weblog/templates/weblog/register.html
+++ b/weblog/templates/weblog/register.html
@@ -23,7 +23,7 @@
                             <a class="nav-link" href="{% url 'weblog:signin' %}">ورود به سیستم</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="{% url 'weblog:register' %}">ثبت نام</a>
+                            <a class="nav-link active" href="{% url 'weblog:register' %}">ثبت نام</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">درباره ما</a>
