--- a/weblog/templates/weblog/base.html
+++ b/weblog/templates/weblog/base.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>رزومو پلتفرم رزومه آنلاین</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
@@ -46,7 +46,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
     </nav>
-    <div class="container">
+    <br>
+    <br>
+
+    <div>
 
         {% block body_block %}
         <!-- CONTENT -->
