--- a/weblog/templates/weblog/base.html
+++ b/weblog/templates/weblog/base.html
@@ -2,6 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script src="{% static 'js/sweetalert2-8.13.4/package/dist/sweetalert2.all.min.js' %}"></script>    
+    <link rel="stylesheet" href="{% static 'js/sweetalert2-8.13.4/package/dist/sweetalert2.min.css'%}" crossorigin="anonymous">
+
     <!-- jquery and bootstrap added below!  -->
     <script src="{% static 'public/jquery-3.4.1.js'%}" crossorigin="anonymous"></script>
     <script src="{% static 'public/popper.min.js'%}" crossorigin="anonymous"></script>
@@ -13,6 +17,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="shortcut icon" href="{% static 'images/icon.jpg' %}" />
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
@@ -38,10 +44,11 @@
                     <a class="dropdown-item" href="#">دسته ۲</a>
                     <a class="dropdown-item" href="#">دسته ۳</a>
                     </div>
-                </li>          
+                </li>         
                 </ul>
             </div>
             <a class="navbar-brand" href="{% url 'weblog:home' %}" style="font-family:Lalezar">رزومو پلتفرم رزومه آنلاین</a>
+            <a href="{% url 'weblog:home' %}"><img src="{%static 'images/icon.jpg'%}" alt="" style="height: auto; width: auto; max-height: 70px ; max-width: 70px;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
