placeholders added and alignment configured

--- a/weblog/templates/weblog/additional_info_register.html
+++ b/weblog/templates/weblog/additional_info_register.html
@@ -31,22 +31,22 @@
                 <input type="submit" class="btn btn-success btn-submit" value="تکمیل">
             </form>
         </div>
-        <div class="col" dir="rtl" style="font-family: 'Lalezar';">
+        <div class="col text-center" dir="rtl" style="font-family: 'Lalezar';">
             <p>
                 قوانین عضویت در وبسایت رزومو :
 
             </p>
             <p>
-                ۱ - تمامی حق انتشار و ارجاع وبسایت متعلق به رزومو میباشد                            
+                ۱ - لطفا اطلاعات روبرو را در صورتی که هرکدام از موارد را شامل میشوید پر بفرمایید
             </p>
             <p>
-                ۲ - استفاده از هرگونه نام کاربری مستهجن و زشت ممنوع میباشد
+                ۲ - استفاده از هرگونه نام های مستهجن و زشت ممنوع میباشد
             </p>
             <p>
-                ۳ - ارسال پست های شامل موارد غیر قانونی ممنوع میباشد                            
+                ۳ - لینک های شامل موارد غیر قانونی ممنوع میباشد                            
             </p>
             <p>
-                ۴ - از گذاشتن کامنت های شامل فحش و حرف های رکیک و ناسزا جدا خودداری کنید                           
+                ۴ - از گذاشتن ای دی های شامل فحش و حرف های رکیک و ناسزا جدا خودداری کنید                           
             </p>
             <p>
                 ۵ - در صورت رعایت نکردن هر کدام از موارد بالا اکانت شما مسدود شده و در نهایت ای پی شما مسدود خواهد شد
