remove ب from logoutsuccess.html

--- a/weblog/templates/weblog/logoutSuccessful.html
+++ b/weblog/templates/weblog/logoutSuccessful.html
@@ -13,7 +13,7 @@ Swal.fire({
   position: 'center',
   type: 'success',
   title: 'خروج شما با موفقیت انجام شد',
-  text: '! بخدانگهدار',
+  text: '! خدانگهدار',
   showConfirmButton: false,
   timer: 2000,
 
