profile picture added to user detail just one bug remained:
that session i used for disabling direct url to additional_register_form
is a little buggy! after you sign up or sign in it will malfunction

--- a/weblog/templates/weblog/additional_info_register.html
+++ b/weblog/templates/weblog/additional_info_register.html
@@ -20,7 +20,7 @@
             <p class="alert-secondary text-center" style="font-family: Lalezar"> :  لطفا در صورتی که تمایل دارید اطلاعات زیر را پر کنید</p>
             <p class="alert-primary text-center" style="font-family: Lalezar">لطفا برای حفظ اطلاعاتتان به هیچ عنوان صفحه را رفرش نکنید</p>
 
-            <form method="POST">
+            <form enctype="multipart/form-data" method="POST">
                 <table>
                     {{additional_form.as_table}}
                 </table>
