--- a/weblog/templates/weblog/home.html
+++ b/weblog/templates/weblog/home.html
@@ -25,7 +25,16 @@
                     {% endif %}
               </p>
             </div>
-            <!-- Soton 2 samt rast -->
+
+            <div class="col" id="last-online">
+              <p>:اخرین کاربران آنلاین </p>
+              <p>
+
+              </p>
+            </div>
+
+
+            <!-- Soton 3 samt rast -->
             <div class="col" id="last-posts">
               <p>:اخرین پست های افراد </p>
               <p>
