profile webpage completely created and fixed!

--- a/weblog/templates/weblog/register.html
+++ b/weblog/templates/weblog/register.html
@@ -17,7 +17,7 @@
                 <div class="container" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
 
                     <div class="row">
-                        <div class="col">
+                        <div class="col" style="font-size: 22px">
                                 <form method="POST">
                                         <table>
                                             {{signup_form.as_table}}
