--- a/weblog/templates/weblog/additional_info_register.html
+++ b/weblog/templates/weblog/additional_info_register.html
@@ -15,7 +15,7 @@
     </style>
 
     <div class="container wrapper row">
-        <div class="col-6">
+        <div class="col-6" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 20px;">
             <p class="badge-warning text-center" style="font-family: Lalezar">نام کاربری شما : {{username}}</p>
             <p class="alert-secondary text-center" style="font-family: Lalezar"> :  لطفا در صورتی که تمایل دارید اطلاعات زیر را پر کنید</p>
             <p class="alert-primary text-center" style="font-family: Lalezar">لطفا برای حفظ اطلاعاتتان به هیچ عنوان صفحه را رفرش نکنید</p>
