--- a/weblog/templates/weblog/user_profile.html
+++ b/weblog/templates/weblog/user_profile.html
@@ -9,100 +9,107 @@
 
 <style>
     body{
-    background: -webkit-linear-gradient(right, #1f1f20, #19191a);
-}
-.emp-profile{
-    padding: 3%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    border-radius: 0.5rem;
-    background: #fff;
-}
-.profile-img{
-    text-align: center;
-}
-.profile-img img{
-    width: 70%;
-    height: 100%;
-}
-.profile-img .file {
-    position: relative;
-    overflow: hidden;
-    margin-top: -20%;
-    width: 70%;
-    border: none;
-    border-radius: 0;
-    font-size: 15px;
-    background: #212529b8;
-}
-.profile-img .file input {
-    position: absolute;
-    opacity: 0;
-    right: 0;
-    top: 0;
-}
-.profile-head h5{
-    color: #333;
-}
-.profile-head h6{
-    color: #0062cc;
-}
-.profile-edit-btn{
-    border: none;
-    border-radius: 1.5rem;
-    width: 70%;
-    padding: 2%;
-    font-weight: 600;
-    color: #6c757d;
-    cursor: pointer;
-}
-.proile-rating{
-    font-size: 12px;
-    color: #818182;
-    margin-top: 5%;
-}
-.proile-rating span{
-    color: #495057;
-    font-size: 15px;
-    font-weight: 600;
-}
-.profile-head .nav-tabs{
-    margin-bottom:5%;
-}
-.profile-head .nav-tabs .nav-link{
-    font-weight:600;
-    border: none;
-}
-.profile-head .nav-tabs .nav-link.active{
-    border: none;
-    border-bottom:2px solid #0062cc;
-}
-.profile-work{
-    padding: 14%;
-    margin-top: -15%;
-}
-.profile-work p{
-    font-size: 12px;
-    color: #818182;
-    font-weight: 600;
-    margin-top: 10%;
-}
-.profile-work a{
-    text-decoration: none;
-    color: #495057;
-    font-weight: 600;
-    font-size: 14px;
-}
-.profile-work ul{
-    list-style: none;
-}
-.profile-tab label{
-    font-weight: 600;
-}
-.profile-tab p{
-    font-weight: 600;
-    color: #0062cc;
-}
+        background: -webkit-linear-gradient(right, #1f1f20, #19191a);
+    }
+    .emp-profile{
+        padding: 3%;
+        margin-top: 3%;
+        margin-bottom: 3%;
+        border-radius: 0.5rem;
+        background: #fff;
+    }
+    .profile-img{
+        text-align: center;
+    }
+    .profile-img img{
+        width: 70%;
+        height: 100%;
+    }
+    .profile-img .file {
+        position: relative;
+        overflow: hidden;
+        margin-top: -25%;
+        width: 70%;
+        border: none;
+        border-radius: 0;
+        font-size: 15px;
+        background: #212529b8;
+    }
+
+    .file:hover
+    {
+        background: #007bf6b8;
+        font-size: 17px;
+    }
+
+    .profile-img .file input {
+        position: absolute;
+        opacity: 0;
+        right: 0;
+        top: 0;
+    }
+    .profile-head h5{
+        color: #333;
+    }
+    .profile-head h6{
+        color: #0062cc;
+    }
+    .profile-edit-btn{
+        border: none;
+        border-radius: 1.5rem;
+        width: 70%;
+        padding: 2%;
+        font-weight: 600;
+        color: #6c757d;
+        cursor: pointer;
+    }
+    .proile-rating{
+        font-size: 12px;
+        color: #818182;
+        margin-top: 5%;
+    }
+    .proile-rating span{
+        color: #495057;
+        font-size: 15px;
+        font-weight: 600;
+    }
+    .profile-head .nav-tabs{
+        margin-bottom:5%;
+    }
+    .profile-head .nav-tabs .nav-link{
+        font-weight:600;
+        border: none;
+    }
+    .profile-head .nav-tabs .nav-link.active{
+        border: none;
+        border-bottom:2px solid #0062cc;
+    }
+    .profile-work{
+        padding: 14%;
+        margin-top: -15%;
+    }
+    .profile-work p{
+        font-size: 12px;
+        color: #818182;
+        font-weight: 600;
+        margin-top: 10%;
+    }
+    .profile-work a{
+        text-decoration: none;
+        color: #495057;
+        font-weight: 600;
+        font-size: 14px;
+    }
+    .profile-work ul{
+        list-style: none;
+    }
+    .profile-tab label{
+        font-weight: 600;
+    }
+    .profile-tab p{
+        font-weight: 600;
+        color: #0062cc;
+    }
 </style>
 
 
@@ -111,22 +118,31 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
-                            <div class="file btn btn-lg btn-primary">
-                                Change Photo
+                        {% if user_obj.userdetail.profile_pic %}
+                            <img style="border-radius: 5%;" src="/media/{{user_obj.userdetail.profile_pic}}" alt=""/>
+
+                            {% if user.is_authenticated and username_in_url == user.username %}
+                                <div class="file btn btn-lg btn-primary">
+                                    Change Photo
                                 <input type="file" name="file"/>
                             </div>
+                            {% else %}    
+                            {% endif %}
+
+
+                        {% endif %}
+
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="profile-head">
                                     <h5>
-                                        Kshiti Ghelani
+                                        {{user_obj.get_full_name}}
                                     </h5>
                                     <h6>
-                                        Web Developer and Designer
+                                        {{user_obj.userdetail.aboutme}}
                                     </h6>
-                                    <p class="proile-rating">RANKINGS : <span>8/10</span></p>
+                                    <p class="proile-rating">RANK : <span>{{user_obj.userdetail.rank}}</span></p>
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>
@@ -138,22 +154,66 @@
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile"/>
+                        {% if user.is_authenticated and username_in_url == user.username %}
+                            <a class="profile-edit-btn" href="#">Edit Profile</a>
+                        {% else %}    
+                        {% endif %}
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-work">
-                            <p>WORK LINK</p>
-                            <a href="">Website Link</a><br/>
-                            <a href="">Bootsnipp Profile</a><br/>
-                            <a href="">Bootply Profile</a>
+                            <p>Other Pages</p>
+
+                            {% if user_obj.userdetail.github_link %}
+                            
+                            <a href="{{user_obj.userdetail.github_link}}">GitHub</a><br/>
+                            
+                            {% endif %}
+
+
+                            {% if user_obj.userdetail.facebook_link %}
+                            
+                            <a href="{{user_obj.userdetail.facebook_link}}">Facebook</a><br/>
+                            
+                            {% endif %}
+                            
+
+                            {% if user_obj.userdetail.Linkedin_link %}
+                            
+                            <a href="{{user_obj.userdetail.Linkedin_link}}">LinkedIn</a><br/>
+                            
+                            {% endif %}  
+
+
+                            {% if user_obj.userdetail.Instagram_link %}
+                            
+                            <a href="{{user_obj.userdetail.Instagram_link}}">Instagram</a><br/>
+                            
+                            {% endif %}     
+
+
+                            {% if user_obj.userdetail.Telegram_link %}
+                            
+                            <a href="{{user_obj.userdetail.Telegram_link}}">Telegram</a><br/>
+                            
+                            {% endif %}   
+
+
+                            {% if user_obj.userdetail.personal_website %}
+                            
+                            <a href="{{user_obj.userdetail.personal_website}}">Personal Website</a><br/>
+                            
+                            {% endif %} 
+                            
                             <p>SKILLS</p>
-                            <a href="">Web Designer</a><br/>
-                            <a href="">Web Developer</a><br/>
-                            <a href="">WordPress</a><br/>
-                            <a href="">WooCommerce</a><br/>
-                            <a href="">PHP, .Net</a><br/>
+                            {% if user_obj.userdetail.primary_skill == user_obj.userdetail.secondary_skill %}
+                                <a href="">{{user_obj.userdetail.primary_skill}}</a><br/>
+                            {% else %}
+                                <a href="">{{user_obj.userdetail.primary_skill}}</a><br/>
+                                <a href="">{{user_obj.userdetail.secondary_skill}}</a><br/>
+                            {% endif %}
+
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -161,18 +221,18 @@
                             <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>User Id</label>
+                                                <label>Username</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Kshiti123</p>
+                                                <p>{{user_obj.username}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Name</label>
+                                                <label>Full Name</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Kshiti Ghelani</p>
+                                                <p>{{user_obj.get_full_name}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -180,7 +240,7 @@
                                                 <label>Email</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>kshitighelani@gmail.com</p>
+                                                <p>{{user_obj.email}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -188,7 +248,7 @@
                                                 <label>Phone</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>123 456 7890</p>
+                                                <p>{{user_obj.userdetail.phone}}</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -196,7 +256,7 @@
                                                 <label>Profession</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Web Developer and Designer</p>
+                                                <p>{{user_obj.userdetail.profession}}</p>
                                             </div>
                                         </div>
                             </div>
@@ -206,7 +266,7 @@
                                                 <label>Experience</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Expert</p>
+                                                <p>No Info</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -214,7 +274,7 @@
                                                 <label>Hourly Rate</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>10$/hr</p>
+                                                <p>No Info</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -222,7 +282,7 @@
                                                 <label>Total Projects</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>230</p>
+                                                <p>No Info</p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -244,7 +304,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <label>Your Bio</label><br/>
-                                        <p>Your detail description</p>
+                                        <p>{{user_obj.userdetail.bio}}</p>
                                     </div>
                                 </div>
                             </div>
