edit profile url and view added now it needs to configured and be ready to use!

--- a/weblog/templates/weblog/base.html
+++ b/weblog/templates/weblog/base.html
@@ -58,7 +58,7 @@
                         تنظیمات ناحیه کاربری
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">تغییر مشخصات</a>
+                            <a class="dropdown-item" href="{% url 'weblog:edit_profile' user%}">تغییر مشخصات</a>
                             <a class="dropdown-item" href="#">تنظیمات امنیتی</a>
                             <a class="dropdown-item" href="#">ارسال تیکت</a>
                         </div>
