postlike created and fixed
now everything is ready and i need just to do 3 things

and all of them are with CRUD Views

1 - newpost
2 - newcomment
3 - newlike
*optional* - edituser

--- a/weblog/templates/weblog/home.html
+++ b/weblog/templates/weblog/home.html
@@ -58,7 +58,7 @@
               <p>
                   {% if last_blogposts %}
                     {% for blogpost in last_blogposts %}
-                      <a href="#">{{blogpost}}</p>
+                      <a href="{% url 'weblog:post' blogpost.username blogpost.id %}">{{blogpost}}</p>
                     {% endfor %}
                   {% else %}
                      <p> ! هیچ پستی یافت نشد</p>
